--- a/src/SpaceSim/Properties/Settings.settings
+++ b/src/SpaceSim/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="WriteBitmaps" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="UseTheTurnForce" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
@@ -18,7 +18,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="ScreenSize" Type="System.Drawing.Size" Scope="Application">
-      <Value Profile="(Default)">1600, 900</Value>
+      <Value Profile="(Default)">1280, 720</Value>
     </Setting>
   </Settings>
 </SettingsFile>
