--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -9,7 +9,7 @@
     <applicationSettings>
         <SpaceSim.Properties.Settings>
             <setting name="WriteBitmaps" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="UseTheTurnForce" serializeAs="String">
                 <value>False</value>
@@ -24,7 +24,7 @@
                 <value>False</value>
             </setting>
             <setting name="ScreenSize" serializeAs="String">
-                <value>1600, 900</value>
+                <value>1280, 720</value>
             </setting>
         </SpaceSim.Properties.Settings>
     </applicationSettings>
