Added Ti grid fins

--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -9,7 +9,7 @@
     <applicationSettings>
         <SpaceSim.Properties.Settings>
             <setting name="WriteBitmaps" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="UseTheTurnForce" serializeAs="String">
                 <value>False</value>
