--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -26,6 +26,9 @@
             <setting name="ScreenSize" serializeAs="String">
                 <value>1280, 720</value>
             </setting>
+            <setting name="PolarOrbit" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SpaceSim.Properties.Settings>
     </applicationSettings>
 </configuration>
