--- a/src/SpaceSim/Properties/Settings.settings
+++ b/src/SpaceSim/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="ScreenSize" Type="System.Drawing.Size" Scope="Application">
       <Value Profile="(Default)">1280, 720</Value>
     </Setting>
+    <Setting Name="PolarOrbit" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
