--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -15,7 +15,7 @@
                 <value>False</value>
             </setting>
             <setting name="WriteCsv" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="FirstBitmapIndex" serializeAs="String">
                 <value>0</value>
@@ -24,7 +24,7 @@
                 <value>False</value>
             </setting>
             <setting name="ScreenSize" serializeAs="String">
-                <value>1600, 900</value>
+                <value>1280, 720</value>
             </setting>
             <setting name="PolarOrbit" serializeAs="String">
                 <value>True</value>
