--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -24,10 +24,10 @@
                 <value>False</value>
             </setting>
             <setting name="ScreenSize" serializeAs="String">
-                <value>1280, 720</value>
+                <value>1600, 900</value>
             </setting>
             <setting name="PolarOrbit" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </SpaceSim.Properties.Settings>
     </applicationSettings>
