Updating landing profiles Fixing how terminated bodies work

--- a/src/SpaceSim/Properties/Settings.settings
+++ b/src/SpaceSim/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="WriteCsv" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="FirstBitmapIndex" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">0</Value>
