--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -15,7 +15,7 @@
                 <value>False</value>
             </setting>
             <setting name="WriteCsv" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="FirstBitmapIndex" serializeAs="String">
                 <value>0</value>
