--- a/src/OpenCLWrapper/OpenCLWrapper.csproj
+++ b/src/OpenCLWrapper/OpenCLWrapper.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CLSourceBase.cs" />
+    <Compile Include="FunctionMapping.cs" />
     <Compile Include="ICLSource.cs" />
     <Compile Include="IKernel.cs" />
     <Compile Include="KernelFile.cs" />
@@ -50,7 +51,8 @@
     <Compile Include="OpenCLProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializer.cs" />
-    <Compile Include="SymbolMapping.cs" />
+    <Compile Include="ConstantMapping.cs" />
+    <Compile Include="SourceHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
