--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -1,34 +1,39 @@
 <?xml version="1.0"?>
 <configuration>
-<configSections>
+  <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="SpaceSim.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+      <section name="SpaceSim.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
-</configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
-    <applicationSettings>
-        <SpaceSim.Properties.Settings>
-            <setting name="WriteBitmaps" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="UseTheTurnForce" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="WriteCsv" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="FirstBitmapIndex" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="FullScreen" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ScreenSize" serializeAs="String">
-                <value>1600, 900</value>
-            </setting>
-            <setting name="PolarOrbit" serializeAs="String">
-                <value>False</value>
-            </setting>
-        </SpaceSim.Properties.Settings>
-    </applicationSettings>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+  <applicationSettings>
+    <SpaceSim.Properties.Settings>
+      <setting name="WriteBitmaps" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="UseTheTurnForce" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="WriteCsv" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="FirstBitmapIndex" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="FullScreen" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ScreenSize" serializeAs="String">
+        <value>1600, 900</value>
+      </setting>
+      <setting name="PolarOrbit" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Font" serializeAs="String">
+        <value>Verdana, 11pt</value>
+      </setting>
+    </SpaceSim.Properties.Settings>
+  </applicationSettings>
 </configuration>
