--- a/src/SpaceSim/Properties/Settings.settings
+++ b/src/SpaceSim/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="PolarOrbit" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Font" Type="System.Drawing.Font" Scope="Application">
+      <Value Profile="(Default)">Verdana, 11pt</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
