--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -11,7 +11,7 @@
   <applicationSettings>
     <SpaceSim.Properties.Settings>
       <setting name="WriteBitmaps" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="UseTheTurnForce" serializeAs="String">
         <value>False</value>
@@ -26,10 +26,10 @@
         <value>False</value>
       </setting>
       <setting name="ScreenSize" serializeAs="String">
-        <value>1280, 720</value>
+        <value>1600, 900</value>
       </setting>
       <setting name="PolarOrbit" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="Font" serializeAs="String">
         <value>Verdana, 11pt</value>
