--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -26,13 +26,19 @@
         <value>False</value>
       </setting>
       <setting name="ScreenSize" serializeAs="String">
-        <value>1600, 900</value>
+        <value>1280, 720</value>
       </setting>
       <setting name="PolarOrbit" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="Font" serializeAs="String">
         <value>Verdana, 11pt</value>
+      </setting>
+      <setting name="RotateInOrbit" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="Inclination" serializeAs="String">
+        <value>51.6</value>
       </setting>
     </SpaceSim.Properties.Settings>
   </applicationSettings>
