Added IFA and StarKicker

--- a/src/SpaceSim/Properties/Settings.settings
+++ b/src/SpaceSim/Properties/Settings.settings
@@ -18,7 +18,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="ScreenSize" Type="System.Drawing.Size" Scope="Application">
-      <Value Profile="(Default)">1280, 720</Value>
+      <Value Profile="(Default)">1600, 900</Value>
     </Setting>
     <Setting Name="PolarOrbit" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
@@ -27,10 +27,10 @@
       <Value Profile="(Default)">Verdana, 11pt</Value>
     </Setting>
     <Setting Name="RotateInOrbit" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Inclination" Type="System.Single" Scope="Application">
-      <Value Profile="(Default)">51.6</Value>
+      <Value Profile="(Default)">28.5</Value>
     </Setting>
   </Settings>
 </SettingsFile>
