--- a/src/SpaceSim/app.config
+++ b/src/SpaceSim/app.config
@@ -26,7 +26,7 @@
         <value>False</value>
       </setting>
       <setting name="ScreenSize" serializeAs="String">
-        <value>1280, 720</value>
+        <value>1600, 900</value>
       </setting>
       <setting name="PolarOrbit" serializeAs="String">
         <value>False</value>
@@ -35,10 +35,10 @@
         <value>Verdana, 11pt</value>
       </setting>
       <setting name="RotateInOrbit" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="Inclination" serializeAs="String">
-        <value>51.6</value>
+        <value>28.5</value>
       </setting>
     </SpaceSim.Properties.Settings>
   </applicationSettings>
